<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aero</string>
    <string name="action_settings">Settings</string>
    <string name="http">Play Online</string>
	<string name="stream">Stream</string>
	<string name="sd">Download</string>
	<string name="uri">Uri</string>
	<string name="raw">Raw</string>
	<string name="pause">Pause</string>
	<string name="resume">Resume</string>
	<string name="stop">Stop</string>
	<string name="loop">Loop</string>
	<string name="backward">Backward</string>
	<string name="forward">Forward</string>
	<string name="info">Info</string>
	<string name="track">now playing</string>
	<color name="bkg">#270601</color>
	<string name="exit">Выход</string>
	<string name="save_data">Сохранить данные?</string>
	<string name="yes">Да</string>
	<string name="no">Нет</string>
	<string name="cancel">Отмена</string>
	<string name="user_cancel">Canceled</string>
	<string name="saved">Сохранено</string>
	<string name="Play">Play Offline</string>
	<color name="shadows">#f89d1b</color>
	<color name="text_color">#ffffff</color>
	<string name="Current_pos">00:00</string>
	<string name="Duration">00:00</string>
	<color name="bkg2">#d8d8ab</color>
	<color name="bkg3">#e0cd8c</color>
	
	

</resources>
