<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-10dp"
    android:background="@drawable/bkg"
    android:gravity="center"
    android:padding="5dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@+id/btnForward"
        android:layout_toRightOf="@+id/btnBackward"
        android:gravity="center"
        android:text="@string/track"
        android:textColor="@color/bkg" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_above="@+id/btnPause"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:background="@color/bkg2"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnStartSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignLeft="@+id/btnResume"
        android:layout_alignRight="@+id/btnStop"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_aqua"
        android:onClick="onClickStart"
        android:text="@string/sd"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btnStartHttp"
        android:layout_toRightOf="@+id/btnStartSD"
        android:background="@drawable/button_aqua"
        android:onClick="onClickStart"
        android:text="@string/Play"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/seekbar_progress"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnResume"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="10dp"
        android:layout_toLeftOf="@+id/btnPause"
        android:background="@drawable/button_send"
        android:onClick="onClick"
        android:text="@string/resume"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnBackward"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="5dp"
        android:layout_toLeftOf="@+id/btnResume"
        android:background="@drawable/button_send"
        android:onClick="onClick"
        android:text="@string/backward"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPause"
        android:layout_alignTop="@+id/btnPause"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/btnPause"
        android:background="@drawable/button_send"
        android:onClick="onClick"
        android:text="@string/stop"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnForward"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btnStop"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/btnStop"
        android:background="@drawable/button_send"
        android:onClick="onClick"
        android:text="@string/forward"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnPause"
        android:layout_weight="1"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_send"
        android:onClick="onClick"
        android:text="@string/pause"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/btnBackward"
        android:layout_alignRight="@+id/btnBackward"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginRight="5dp"
        android:background="@color/bkg3"
        android:contentDescription="@string/Current_pos"
        android:gravity="center"
        android:text="@string/Current_pos"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/btnForward"
        android:layout_alignRight="@+id/btnForward"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:background="@color/bkg3"
        android:contentDescription="@string/Duration"
        android:gravity="center"
        android:text="@string/Duration"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnStartHttp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_toLeftOf="@+id/btnStartSD"
        android:background="@drawable/button_aqua"
        android:onClick="onClickStart"
        android:text="@string/http"
        android:textColor="@color/bkg"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout3"
        android:contentDescription="@string/info"
        android:scaleType="centerInside"
        android:src="@drawable/aero_trans" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginBottom="30dp"
        android:layout_toLeftOf="@+id/btnStop"
        android:text="TextView" 
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/textView4"
        android:text="TextView" 
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_toLeftOf="@+id/btnForward"
        android:text="TextView" 
        android:visibility="invisible"/>

</RelativeLayout>